--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
+    "jquery": "^3.5.1",
     "mongoose": "^5.8.11",
     "monk": "^7.3.2",
     "passport": "^0.4.1",
