--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "purecss": "^2.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
@@ -20,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://localhost:4000/",
   "eslintConfig": {
     "extends": [
       "react-app",
