--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.19.4"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -33,6 +34,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "purecss": "^2.0.3",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-script-tag": "^1.1.2"
   }
 }
